test/libsolidity/syntaxTests/specialFunctions/abidecode/abi_decode_invalid_argument_array_of_tuples.sol
contract C {
    function f() pure public {
        abi.decode("", ((uint, int)[5][6]));
    }
}
// ----
// TypeError 2614: (68-79): Indexed expression has to be a type, mapping or array (is tuple(type(uint256),type(int256)))
